Remove height restriction on selectNationsResult, so that line wrapping works correctly on small devices (tested on iPhone 5S)

--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,6 @@ body {
 .selectNationsResult {
   font-weight: bold;
   margin-top: 12px;
-  height: 24px;
 }
 
 .errorMessage {
